Complete dir implementation by adding jobs to wr.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -58,7 +58,7 @@ issues:
         - gochecknoinits
         - gochecknoglobals
         - dupl
-    - path: version.go
+    - path: version\.go
       linters:
         - forbidigo
   max-issues-per-linter: 0
