--- a/.golangci.yml
+++ b/.golangci.yml
@@ -57,7 +57,6 @@ issues:
       linters:
         - funlen
         - maintidx
-        - contextcheck
     - path: cmd
       linters:
         - gochecknoinits
@@ -118,6 +117,7 @@ linters:
     - gosec
     - ifshort
     - importas
+    - ireturn
     - lll
     - maintidx
     - makezero
@@ -157,7 +157,6 @@ linters:
   #   - goprintffuncname
   #   - grouper
   #   - interfacer
-  #   - ireturn
   #   - paralleltest
   #   - promlinter
   #   - revive
