--- a/.golangci.yml
+++ b/.golangci.yml
@@ -75,7 +75,7 @@ issues:
         - dupl
   max-issues-per-linter: 0
   max-same-issues: 0
-  new-from-rev: master
+  #new-from-rev: master
 
 linters:
   disable-all: true
