Upgrade to go 1.19 and latest golangci.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -116,7 +116,6 @@ linters:
     - goimports
     - gomnd
     - gosec
-    - ifshort
     - importas
     - lll
     - maintidx
@@ -156,6 +155,7 @@ linters:
   #   - gomodguard
   #   - goprintffuncname
   #   - grouper
+  #   - ifshort
   #   - interfacer
   #   - ireturn
   #   - paralleltest
