--- a/ch.yml
+++ b/ch.yml
@@ -1,20 +1,29 @@
-prefixes: ["/lustre/scratch114", "/lustre/scratch115/realdata/mdt0", "/lustre/scratch115/realdata/mdt1", "/lustre/scratch115/realdata/mdt2", "/lustre/scratch115/realdata/mdt3", "/lustre/scratch118/humgen/hgi", "/lustre/scratch119/realdata/mdt2", "/lustre/scratch119/realdata/mdt3", "/lustre/scratch123/hgi/mdt1", "/lustre/scratch123/hgi/mdt2", "/lustre/scratch123/hgi/mdt0"]
+prefixes: ["/lustre/scratch118/humgen/hgi", "/lustre/scratch119/realdata/mdt2", "/lustre/scratch119/realdata/mdt3", "/lustre/scratch123/hgi/mdt1", "/lustre/scratch123/hgi/mdt2", "/lustre/scratch123/hgi/mdt0"]
 lookupDir: teams
 lookup:
   anderson: team152
   barrett: team143
   barroso: team35
   carter: team70
+  davenport: team282
   deloukas: team147
   durbin: team118
+  gaffney: team170
   hgi: hgi
   hurles: team29
+  hurles_tmp_share: team29_share
+  martin: team281
   mcginnis: team111
+  miska: team224
   palotie: team128
+  parts: team227
   sandhu: team149
   soranzo: team151
+  trynka: teamtrynka
   tyler-smith: team19
   zeggini: team144
 directDir: projects
 exceptions:
   otcoregen: 15114
+  decipher: 15257
+  hb15_en6_swap: 1185
