Test with latest go and linters.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -80,16 +80,13 @@ issues:
 linters:
   disable-all: true
   enable:
-    - deadcode
     - errcheck
     - gosimple
     - govet
     - ineffassign
     - staticcheck
-    - structcheck
     - typecheck
     - unused
-    - varcheck
     - containedctx
     - contextcheck
     - cyclop
@@ -98,8 +95,8 @@ linters:
     - durationcheck
     - errname
     - errorlint
-    - exportloopref
     - exhaustive
+    - exportloopref
     - forbidigo
     - forcetypeassert
     - funlen
@@ -128,29 +125,36 @@ linters:
     - nlreturn
     - noctx
     - nolintlint
+    - nosprintfhostport
     - prealloc
     - predeclared
+    - reassign
     - revive
-    - rowserrcheck
     - stylecheck
     - tenv
     - thelper
     - unconvert
     - unparam
-    - wastedassign
+    - usestdlibvars
+    #- wastedassign
     - whitespace
     - wsl
   # disable:
+  #   - asasalint
   #   - asciicheck
   #   - bidichk
   #   - bodyclose
   #   - decorder
   #   - depguard
   #   - errchkjson
+  #   - execinquery
   #   - exhaustivestruct
+  #   - exhaustruct
+  #   - ginkgolinter
   #   - gofmt
   #   - gofumpt
   #   - goheader
+  #   - golint
   #   - gomoddirectives
   #   - gomodguard
   #   - goprintffuncname
@@ -158,12 +162,20 @@ linters:
   #   - ifshort
   #   - interfacer
   #   - ireturn
+  #   - loggercheck
+  #   - maligned
+  #   - nonamedreturns
+  #   - nosnakecase
   #   - paralleltest
   #   - promlinter
-  #   - revive
+  #   - rowserrcheck
+  #   - scopeline
   #   - sqlclosecheck
+  #   - structcheck
   #   - tagliatelle
+  #   - testableexamples
   #   - testpackage
   #   - tparallel
+  #   - varcheck
   #   - varnamelen
   #   - wrapcheck
