Exclude ch/from.go from some linting, to avoid false positive.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -79,6 +79,7 @@ issues:
         - goimports
   max-issues-per-linter: 0
   max-same-issues: 0
+  new-from-rev: master
 
 linters:
   disable-all: true
