--- a/server/static/wrstat/package.json
+++ b/server/static/wrstat/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "@babel/plugin-proposal-private-property-in-object": ""
   }
 }
