--- a/server/static/wrstat/package.json
+++ b/server/static/wrstat/package.json
@@ -14,6 +14,7 @@
     "patch-package": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -46,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "@babel/plugin-proposal-private-property-in-object": ""
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "cross-env": "^7.0.3"
   }
 }
