--- a/server/static/wrstat/package.json
+++ b/server/static/wrstat/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jest-canvas-mock": "^2.5.2"
   }
 }
