--- a/server/static/wrstat/package.json
+++ b/server/static/wrstat/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "date-fns": "^3.6.0",
     "patch-package": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
