--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Script for running the server within the wrstatServer directory
+runserver.sh
