--- a/server/static/wrstat/package.json
+++ b/server/static/wrstat/package.json
@@ -22,13 +22,10 @@
     "build:dev": "cross-env NODE_ENV=development react-scripts build",
     "postinstall": "npx patch-package",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint src/"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -44,7 +41,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "cross-env": "^7.0.3",
-    "jest-canvas-mock": "^2.5.2"
+    "eslint": "^9.3.0",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.3.0",
+    "jest-canvas-mock": "^2.5.2",
+    "typescript-eslint": "^7.11.0"
   }
 }
