--- a/server/static/wrstat/package.json
+++ b/server/static/wrstat/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "date-fns": "^3.6.0",
     "patch-package": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,14 +22,10 @@
     "build:dev": "cross-env NODE_ENV=development react-scripts build",
     "postinstall": "npx patch-package",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint src/"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -43,7 +40,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "cross-env": "^7.0.3",
-    "jest-canvas-mock": "^2.5.2"
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.3.0",
+    "jest-canvas-mock": "^2.5.2",
+    "typescript-eslint": "^7.11.0"
   }
 }
