--- a/.golangci.yml
+++ b/.golangci.yml
@@ -62,6 +62,9 @@ issues:
         - gocyclo
         - cyclop
         - revive
+    - path: dgut/dgut_test\.go
+      linters:
+        - lll
     - path: internal
       linters:
         - gomnd
