Add age to dgut, allowing exploration of files by age categories (#98)
* Refactor DirInfo and Summary to return DirSummary

* Atime is now max of atime, mtime and unix epoch, and mtime cant be negative

* Refactor dgut to dguta

---------

Co-authored-by: Rosie Kern <rk18@sanger.ac.uk>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -62,9 +62,12 @@ issues:
         - gocyclo
         - cyclop
         - revive
+    - path: dgut/dguta_test\.go
+      linters:
+        - lll
     - path: internal
       linters:
-        - gomnd
+        - mnd
         - funlen
     - path: cmd
       linters:
