Add -b flag to switch between reporting apparent byte size and disk usage (blocks)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -99,7 +99,7 @@ linters:
     # extras
     - containedctx
     - contextcheck
-    #- copyloopvar
+    - copyloopvar
     - cyclop
     - dogsled
     - dupl
@@ -110,7 +110,6 @@ linters:
     - errname
     - errorlint
     - exhaustive
-    - exportloopref
     - fatcontext
     - forbidigo
     - forcetypeassert
