Add racesplit for testing split exes

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,4 @@ jobs:
       run: make test
 
     - name: Run tests with race detection
-      run: make race
+      run: make race && make racesplit
